[package]
name = "black-skulls"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
humantime = "2.1.0"
plotlib = "0.5.1"
superchain-client = { git = "https://github.com/SuperChainNetwork/superchain-client" }
time = "0.3.14"
tokio = { version = "1.20.1", features = ["full"] }
